Подкорректировал отправку статистики